--- a/styles/index.css
+++ b/styles/index.css
@@ -90,6 +90,8 @@ a {
 }
 
 .page-heading {
+  display: flex;
+  gap: 2rem;
   align-items: center;
   text-align: center;
   justify-content: center;
@@ -872,13 +874,10 @@ a {
 
 .footer-social-icon a {
   color: #fff;
-  font-size: 16px;
-  margin-right: 15px;
+  margin-right: 10px;
 }
 
 .footer-social-icon i {
-  height: 40px;
-  width: 40px;
   text-align: center;
   line-height: 38px;
   border-radius: 50%;
@@ -960,7 +959,7 @@ a {
 
 .copyright-area {
   background: #202020;
-  padding: 25px 0;
+  padding: 5px 0;
 }
 
 .copyright-text p {
@@ -976,6 +975,9 @@ a {
 .footer-menu li {
   display: inline-block;
   margin-left: 20px;
+}
+.footer-menu ul{
+  margin-bottom: 10px;
 }
 
 .footer-menu li:hover a {
@@ -1005,6 +1007,7 @@ a {
 }
 
 .footer-social-icon .social_icon {
+  padding: 0px;
   text-align: left;
 }
 
