--- a/styles/events.css
+++ b/styles/events.css
@@ -1,12 +1,14 @@
 /* Main Container */
-.main-container {
-  max-width: 1200px;
+/* .main-container {
+  
   margin: 0 auto;
   padding: 20px;
-}
+} */
 
 /* Timeline Container */
 .timeline-container {
+  max-width: 1200px;
+  margin: 0 auto;
   position: relative;
   padding: 20px;
 }
@@ -106,6 +108,11 @@
   .timeline-item {
       flex-direction: column;
       align-items: center;
+  }
+  .timeline-item:before {
+    
+    width: 0px;
+    
   }
 
   .timeline-image {
