--- a/styles/index.css
+++ b/styles/index.css
@@ -1216,3 +1216,53 @@ a {
   font-size: 1.5rem;
   cursor: pointer;
 }
+
+/* 
+  /////////////////////
+  Dashboard
+  ////////////////////
+*/
+.dashboard-container {
+  background-color: #f9f9f9;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  max-width: 683px;
+  margin: 20px auto;
+  text-align: center;
+}
+
+.dashboard-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.dashboard-header h3 {
+  margin: 0;
+  font-size: 24px;
+  font-weight: 600;
+  color: #333;
+}
+
+.completed-text {
+  margin: 0;
+  font-size: 16px;
+  color: #666;
+}
+
+.progress-bar-container {
+  background-color: #e0e0e0;
+  border-radius: 8px;
+  overflow: hidden;
+  height: 20px;
+  width: 100%;
+  margin-top: 10px;
+}
+
+.progress-bar {
+  background-color: #1761ffdc;
+  height: 100%;
+  transition: width 0.3s ease;
+}
