--- a/styles/index.css
+++ b/styles/index.css
@@ -321,7 +321,14 @@ a {
 
 
 /* Small card */
-.card-container {}
+.card-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
+  margin: 20px;
+}
+
 
 .card-item {
   margin: 20px;
@@ -331,10 +338,14 @@ a {
 
 .card-item-img {
   overflow: hidden;
+  height: 15rem;
 }
 
 .card-item-img img {
   width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: 0.2s ease-in;
 }
 
 .card-item-content p {
